css/es-calculator.css
.loading{
	width: 100vw;
	height: 100vh;
	background-color: #FFFFFF; 
}
body{
	overflow: hidden;
}
.table > tbody > tr > td {
	vertical-align: middle;
}
.table{
	margin: 0px;
}
caption{
	border: 1px solid #DDD;
	border-bottom: 0px;
}
.red-line > tbody > tr > td{
	border-color: #FFA3A0;
}
.blue-line > tbody > tr > td{
	border-color: #99E1D9;
}
.yellow-line > tbody > tr > td{
	border-color: #FFD670;
}
.gray-line > caption{
	border-color: #DDDDDD;
}
.red-line > caption{
	border-color: #FFA3A0;
}
.blue-line > caption{
	border-color: #99E1D9;
}
.yellow-line > caption{
	border-color: #FFD670;
}
.gray-line > tbody > tr > td{
	border-color: #DDDDDD;
}
.tablescroller-line{
	height: 2px;
}
.tablescroller-body{
	overflow-x:auto;
	overflow-y:scroll;
	display:block;
}
.tab-content>.active{
	padding: 5px;
}
.inline-right{
	display: inline-block;
	float:right;
	text-align: left;
}
.inline-left{
	display: inline-block;
	float:left;
}
.input-sm{
	width:75%;
	display: inline-block;
	text-align: center;
    border: none;
    background: none;
    box-shadow: none;
}
.red-bg{
	background-color: #FFA3A0;
}
.blue-bg{
	background-color: #99E1D9;
}
.yellow-bg{
	background-color: #FFD670;
}
.gray-bg{
	background-color: #DDDDDD;
}
.white-bg{
	background-color: #FFFFFF;
}
.nav-tabs>li.active>a.red, .nav-tabs>li.active>a.red:hover, .nav-tabs>li.active>a.red:focus{
	background-color:#FFA3A0;
	border: 0px;
}
.nav-tabs>li>a.red:hover, .nav-tabs>li>a.red:focus{
	background-color:#FFC6C4;
	border: 0px;
}
.nav-tabs>li.active>a.blue, .nav-tabs>li.active>a.blue:hover, .nav-tabs>li.active>a.blue:focus{
	background-color:#99E1D9;
	border: 0px;
}
.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus{
	background-color:#DDDDDD;
	border: 0px;
}
.nav-tabs>li>a.blue:hover, .nav-tabs>li>a.blue:focus{
	background-color:#BDE9ED;
	border: 0px;
}
.nav-tabs>li.active>a.yellow, .nav-tabs>li.active>a.yellow:hover, .nav-tabs>li.active>a.yellow:focus{
	background-color:#FFD670;
	border: 0px;
}
.nav-tabs>li>a.yellow:hover, .nav-tabs>li>a.yellow:focus{
	background-color:#FEF6C9;
	border: 0px;
}
.nav-tabs>li>a:hover, .nav-tabs>li>a:focus{
	border: 0px;
}
.nav-tabs>li {
    margin-bottom: -2px;
}
.nav-tabs{
	border: 0px;
}
input, button{
	outline:none !important;
}
.tablescroller-body::-webkit-scrollbar {
	width: 10px;
}
.tablescroller-body::-webkit-scrollbar-track {
	-webkit-border-radius: 0px;
	border-radius: 0px;
	margin:0px;
	background: none;
}
.tablescroller-body::-webkit-scrollbar-thumb {
	-webkit-border-radius: 10px;
	border-radius: 10px;
	background: #888888;
}
.tablescroller-body::-webkit-scrollbar:vertical:hover, .tablescroller-body::-webkit-scrollbar:vertical:active{
	width: 10px;
}
.tablescroller-body::-webkit-scrollbar-thumb:vertical:hover, .tablescroller-body::-webkit-scrollbar-thumb:vertical:active{
	-webkit-border-radius: 12px;
	border-radius: 12px;
	background: #666666;
}
.custom-file-input{
	display:none !important;
}
.custom-file-label{
	background-color: buttonface;
}
.right-align{
	float: right;
}
.small-alert{
	padding: 8px;
	margin: 0px;
	margin-top: -50px;
	display: none;
}
.modal-title{
	text-align: left;
}
.content-li{
	text-align: left;
}
.crowded-row{
	margin: 0px;
}
.crowded-col{
	padding: 0px !important;
}
.hidden{
	display:none;
}
.wide{
	width:95% !important;
}
.narrow{
	width:40% !important;
}
.vertical-middle{
	display: inline-block;
	vertical-align: middle;
}
.vertical-middle::before{
	height: 100%;
	width: 0;
	/*display: inline-block;*/
	vertical-align: middle;
}

